# openim_sdk_core_rust

./: AGENTS.md  Cargo.toml
.cargo/: config.toml
crates/openim-compat-tests/: Cargo.toml
crates/openim-compat-tests/fixtures/: phase0_contract_baseline.json
crates/openim-compat-tests/src/: lib.rs
crates/openim-domain/: Cargo.toml
crates/openim-domain/src/: conversation.rs  file.rs  group.rs  lib.rs  message.rs  relation.rs  user.rs
crates/openim-errors/: Cargo.toml
crates/openim-errors/src/: lib.rs
crates/openim-ffi/: Cargo.toml
crates/openim-ffi/include/: openim_ffi.h
crates/openim-ffi/src/: lib.rs
crates/openim-protocol/: Cargo.toml  build.rs
crates/openim-protocol/src/: codec.rs  constants.rs  envelope.rs  generated.rs  lib.rs  operation.rs  sdkws.rs
crates/openim-session/: Cargo.toml
crates/openim-session-native/: Cargo.toml
crates/openim-session-native/src/: lib.rs
crates/openim-session/src/: lib.rs
crates/openim-storage-core/: Cargo.toml
crates/openim-storage-core/src/: lib.rs
crates/openim-storage-indexeddb/: Cargo.toml
crates/openim-storage-indexeddb/src/: lib.rs  wasm.rs
crates/openim-storage-sqlite/: Cargo.toml
crates/openim-storage-sqlite/src/: lib.rs
crates/openim-storage-sqlite/tests/: go_compat.rs
crates/openim-sync/: Cargo.toml
crates/openim-sync/src/: lib.rs
crates/openim-transport/: Cargo.toml
crates/openim-transport-core/: Cargo.toml
crates/openim-transport-core/src/: lib.rs
crates/openim-transport-native/: Cargo.toml
crates/openim-transport-native/src/: lib.rs
crates/openim-transport-native/tests/: openim_server_compat.rs
crates/openim-transport-wasm/: Cargo.toml
crates/openim-transport-wasm/src/: lib.rs  wasm.rs
crates/openim-transport/src/: lib.rs
crates/openim-types/: Cargo.toml
crates/openim-types/src/: lib.rs
crates/openim-wasm/: Cargo.toml
crates/openim-wasm/src/: lib.rs
docs/: phase-0-contract-freeze.md  phase-1-protocol-diff.md  phase-2-foundation-layer.md  phase-3-storage-layer.md  phase-4-transport-layer.md  phase-5-domain-services.md  phase-6-session-runtime.md  phase-7-message-conversation.md  phase-8-bindings.md  rust-rewrite-v2-remaining-checklist.md
examples/android-kotlin/: OpenIMLifecycleExample.kt  openim_jni_lifecycle.cc
examples/desktop-c/: openim_desktop_lifecycle.c
examples/ios-swift/: OpenIMLifecycleExample.swift
examples/web/: openim_lifecycle.ts
tools/db-fixture/: Cargo.toml
tools/db-fixture/src/: main.rs
tools/go-phase0-replay/: go.mod  main.go
tools/protocol-spike/: Cargo.toml
tools/protocol-spike/src/: main.rs
tools/replay-capture/: Cargo.toml
tools/replay-capture/src/: main.rs
tools/transport-fixture/: Cargo.toml
tools/transport-fixture/src/: main.rs
