[workspace]
members = [
    "crates/openim-errors",
    "crates/openim-protocol",
    "crates/openim-sync",
    "crates/openim-types",
    "crates/openim-transport",
    "tools/protocol-spike",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
flate2 = "1"
futures-util = "0.3"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
url = "2"
