[workspace]
members = [
    "crates/openim-errors",
    "crates/openim-protocol",
    "crates/openim-storage-core",
    "crates/openim-storage-indexeddb",
    "crates/openim-storage-sqlite",
    "crates/openim-sync",
    "crates/openim-types",
    "crates/openim-transport",
    "crates/openim-transport-core",
    "crates/openim-transport-native",
    "crates/openim-transport-wasm",
    "tools/db-fixture",
    "tools/protocol-spike",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
flate2 = "1"
futures-channel = "0.3"
futures-util = "0.3"
js-sys = "0.3"
prost = "0.13"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
url = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
web-sys = "0.3"
