[package]
name = "openim-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
openim-errors = { path = "../openim-errors" }
openim-sync = { path = "../openim-sync" }
openim-types = { path = "../openim-types" }
serde.workspace = true
url.workspace = true
