[package]
name = "openim-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
openim-session = { path = "../openim-session" }
openim-session-native = { path = "../openim-session-native" }
openim-types = { path = "../openim-types" }
serde_json.workspace = true

[dev-dependencies]
futures-util.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
