[package]
name = "openim-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
flate2.workspace = true
openim-errors = { path = "../openim-errors" }
prost.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3.2.0"
