[package]
name = "openim-session-native"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
openim-errors = { path = "../openim-errors" }
openim-session = { path = "../openim-session" }
openim-transport-core = { path = "../openim-transport-core" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
openim-storage-core = { path = "../openim-storage-core" }
openim-storage-sqlite = { path = "../openim-storage-sqlite" }
openim-transport-native = { path = "../openim-transport-native" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
futures-util.workspace = true
tokio-tungstenite.workspace = true
openim-types = { path = "../openim-types" }
openim-protocol = { path = "../openim-protocol" }
prost.workspace = true
