[package]
name = "openim-storage-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
openim-domain = { path = "../openim-domain" }
openim-errors = { path = "../openim-errors" }
openim-storage-core = { path = "../openim-storage-core" }
openim-types = { path = "../openim-types" }
rusqlite.workspace = true
serde_json.workspace = true
