[package]
name = "openim-transport-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
openim-protocol = { path = "../openim-protocol" }
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
