[package]
name = "openim-transport-native"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
openim-protocol = { path = "../openim-protocol" }
openim-transport-core = { path = "../openim-transport-core" }
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
