[package]
name = "openim-transport-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
futures-channel.workspace = true
futures-util.workspace = true
openim-protocol = { path = "../openim-protocol" }
openim-transport-core = { path = "../openim-transport-core" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = [
    "BinaryType",
    "CloseEvent",
    "ErrorEvent",
    "Event",
    "MessageEvent",
    "WebSocket",
] }
