[package]
name = "openim-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
openim-transport-core = { path = "../openim-transport-core" }
openim-transport-native = { path = "../openim-transport-native" }
openim-transport-wasm = { path = "../openim-transport-wasm" }
