[package]
name = "openim-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
openim-session = { path = "../openim-session" }
openim-types = { path = "../openim-types" }
wasm-bindgen.workspace = true
