[package]
name = "openim-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
openim-session = { path = "../openim-session" }
openim-types = { path = "../openim-types" }
serde_json.workspace = true
wasm-bindgen.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys.workspace = true
