[package]
name = "protocol-spike"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
openim-protocol = { path = "../../crates/openim-protocol" }
openim-transport = { path = "../../crates/openim-transport" }
prost.workspace = true
tokio.workspace = true
