[package]
name = "replay-capture"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
openim-compat-tests = { path = "../../crates/openim-compat-tests" }
serde_json.workspace = true
