[package]
name = "replay-capture"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
openim-compat-tests = { path = "../../crates/openim-compat-tests" }
openim-session = { path = "../../crates/openim-session" }
openim-types = { path = "../../crates/openim-types" }
serde_json.workspace = true
