[package]
name = "replay-capture"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
openim-compat-tests = { path = "../../crates/openim-compat-tests" }
openim-protocol = { path = "../../crates/openim-protocol" }
openim-session = { path = "../../crates/openim-session" }
openim-transport = { path = "../../crates/openim-transport" }
openim-types = { path = "../../crates/openim-types" }
prost.workspace = true
serde_json.workspace = true
tokio.workspace = true
