[package]
name = "transport-fixture"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
openim-protocol = { path = "../../crates/openim-protocol" }
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
